# vss-tools

./: .bumpversion.toml  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  FAQ.md  MANIFEST.in  Pipfile  README-PYPI.md  README.md  csvstats.csv  e HEAD~1 --signoffqqq  noxfile.py  piechartversions.csv  piechartversions.py  pyproject.toml  radial.json  radial.py  requirements.txt  sankey.csv  sankey.py  setup.py  somestats.csv  stats.json  test.sh  test_conversions.py  vspec.py  vspec2binary.py  vspec2c.py  vspec2cnative.py  vspec2csv.py  vspec2ddsidl.py  vspec2franca.py  vspec2graphql.py  vspec2id.py  vspec2idl.py  vspec2json.py  vspec2jsonschema.py  (+7 more)
.github/workflows/: buildcheck.yml  check-header.yml  dco.yaml  pre-commit.yml  vspec2aasigproperties.yml  wheel.yml
binary/: CMakeLists.txt  Makefile  README.md  binarytool.c
binary/c_parser/: .gitignore  CMakeLists.txt  Makefile  cparserlib.c  cparserlib.h  testparser.c
binary/go_parser/: go.mod  go.sum  testparser.go
c_native/: README.md  cnativenodelib.c  nativeCnodeDef.h  vssparserutilities.c  vssparserutilities.h  vsstestparser.c
contrib/: csv2pdf.sh  document_constants.py  vspec  vspec2c.py  vspec2graphql.py  vspec2graphql_alternative.py  vspec2protobuf.py  vspec_csv2franca.py
contrib/ocf/: vehicleURI.swagger.json  vspec2ocf.py  vspecocfmap.csv
contrib/templates/: android_vhal_mapping_cpp.tpl
contrib/vspec2aaproperties/: README.md  read_mapping_layer.py  read_type_layer.py  type_hal_parser.py  typemap.yml  types.hal  vspec2aaprop.py  vspec2aaprop_test.sh  vspec2prop_mapping.yml  vspec_helper.py
contrib/vspec2c/: Makefile
contrib/vspec2graphql/: README.md  traverse_tree.py
contrib/vspec2ttl/: vspec2ttl.py  vssotypes.py
docs/: VSS2DDSIDL.md  VSS2GRAPHQL.md  VSS2IDL.md  apigear.md  avro.md  compose.md  cpp-header.md  ddsidl.md  diff.md  export.md  go.md  graphql.md  id.md  plantuml.md  protobuf.md  registry.md  ros2interface.md  s2dm.md  samm.md  tree.md  vhal.md  vspec.md  vspec2id.md  vspec2proto.md  vspec2x.md  vspec2x_arch.md  vspecID.md  vspec_arch.md
docs/extensions/: can.md  cybersecurity_profile.md  network_serialization_profile.md  profiles.md  readme.md
documentation/: config.toml
documentation/content/: _index.md  news.md
model/: constants.py  vsstree.py
obsolete/: vspec2c.py
obsolete/ocf/: vehicleURI.swagger.json  vspec2ocf.csv  vspec2ocf.py  vspecocfmap.csv
obsolete/vspec2aaproperties/: README.md  read_mapping_layer.py  read_type_layer.py  requirements.txt  type_hal_parser.py  typemap.yml  types.hal  vspec2aaprop.py  vspec2aaprop_test.sh  vspec2prop_mapping.yml  vspec_helper.py  vss-code-gen-plan.md
obsolete/vspec2c/: .gitignore  Makefile  README.md  vehicle_signal_specification.c  vehicle_signal_specification.h
ocf/: vspec2ocf.py
serializations/avro/: Record.avsc  TimeSeries.avsc  TimeStampedRecord.avsc  avro-simple-test.py  avro-test.py  timeseries.avsc
src/vss_tools/: __init__.py  cli.py  cli_options.py  compose.py  datatypes.py  diff.py  diff_cmd.py  lazy_group.py  main.py  model.py  registry.py  strict.py  tree.py  units_quantities.py  vspec.py  vspec2binary.py  vspec2csv.py  vspec2ddsidl.py  vspec2franca.py  vspec2graphql.py  vspec2id.py  vspec2json.py  vspec2jsonschema.py  vspec2protobuf.py  vspec2yaml.py
tests/: test_avro_exporter.py  test_conversions.py  test_ddsidl_naming.py  test_graphql_naming.py  test_graphql_utils.py  test_model.py  test_pandas_utils.py  test_qudt_unit_resolution.py  test_registry.py  test_s2dm_exporter.py  test_s2dm_short_names.py  test_s2dm_structs.py  test_s2dm_type_builders.py  test_strict.py  test_vss_node.py
tests/backward_compatibility/: test_compatibility.py
tests/binary/: test.vspec  test_binary.py
tests/ddsidl/: README.md  test.vspec  test_ddsidl.py
tests/generators/: example_generator.py  test.vspec  test_generator.py
vspec/: __init__.py  config.yaml  loggingconfig.py  vspec2vss_config.py  vspec2x.py  vss2x.py
vspec2c/: Makefile  README.md  vehicle_signal_specification.c  vehicle_signal_specification.h  vss.h  vss_demo.c
vspec2c_demo/: Makefile  demo.c
vspec2graphql/: .gitignore  Makefile  README.md  traverse_tree.py
vssexporters/: vss2binary.py  vss2csv.py  vss2ddsidl.py  vss2franca.py  vss2graphql.py  vss2idl.py  vss2json.py  vss2openapi.py  vss2yaml.py
(+728 files in other folders)
