[tool.poetry]
name = "vss-tools"
homepage="https://github.com/COVESA/vss-tools"
description='COVESA Vehicle Signal Specification tooling.'
authors = ["COVESA VSS <covesa-dev@covesa.global>"]
version = "5.0rc1"
license = "Mozilla Public License 2.0"
readme = ["README.md", "README-PYPI.md"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
pyyaml = "^6.0.1"
anytree = "^2.9.0"
deprecation = "^2.1.0"
graphql-core = "*"
rdflib = "^6.0.0"
importlib-metadata = "^7.0"
click = "^8.1.7"
rich-click = "^1.8.3"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
pytest-cov = "*"
types-setuptools = "*"
types-PyYAML = "*"
flake8 = "^6.0.0"
pre-commit = "*"


[tool.poetry.scripts]
vspec = "vss_tools.vspec.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
