[project]
name = "vss-tools"
version = "6.0.0-rc0"
description='COVESA Vehicle Signal Specification tooling.'
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anytree>=2.12.1",
    "click>=8.1.7",
    "graphql-core>=3.2.5",
    "jsonschema>=4.23.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "rdflib>=7.1.1",
    "rich-click>=1.8.3",
    "rich>=13.9.4",
    "graphene>=3.4.3",
    "pandas>=2.2.3",
    "case-converter>=1.2.0",
]
authors = [
{name="COVESA VSS", email="covesa-dev@covesa.global"}
]
license = {text = "Mozilla Public License 2.0"}

[project.urls]
Homepage="https://github.com/COVESA/vss-tools"
Issues = "https://github.com/COVESA/vss-tools/issues"
Changelog = "https://github.com/COVESA/vss-tools/blob/master/CHANGELOG.md"

[project.scripts]
vspec = "vss_tools.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff]
line-length = 120

[tool.uv]
package = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.0",
    "mypy>=1.13.0",
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.12.3",
    "twine>=6.1.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-setuptools>=75.3.0.20241107",
]
